--- a/Market_Analysis.Rmd
+++ b/Market_Analysis.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 ###Read in Data
 ```{r, echo=TRUE}
+
 mmm = read.table("../Stocks/mmm.us.txt", sep=",", header=TRUE)
 
 mmm[3] <- NULL
@@ -21,4 +22,20 @@ mmm$Return <- (mmm$Open - mmm$Close)/mmm$Close
 mmm_open <- mmm[which(mmm$Date == "2005-03-01"),]$Open 
 mmm_close <- mmm[which(mmm$Date == "2005-04-01"),]$Close
 mmm_2005 <- (mmm_close-mmm_open)/mmm_close
+
+
+array = c("mmm", "aapl")
+
+
+stocks = list()
+
+for (i in 1:length(array)) {
+  
+  stocks[[i]] = read.table("../Stocks/mmm.us.txt", sep=",", header=TRUE)
+  
+}
+
+stocks[[1]]
+
+
 ```
