--- a/Market_Analysis.Rmd
+++ b/Market_Analysis.Rmd
@@ -8,34 +8,48 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+
+```{r}
+library(stringr)
+
+```
+
 ###Read in Data
 ```{r, echo=TRUE}
-
-mmm = read.table("../Stocks/mmm.us.txt", sep=",", header=TRUE)
-
-mmm[3] <- NULL
-mmm[3] <- NULL
-mmm[4] <- NULL
-mmm[4] <- NULL
-mmm
-mmm$Return <- (mmm$Open - mmm$Close)/mmm$Close
-mmm_open <- mmm[which(mmm$Date == "2005-03-01"),]$Open 
-mmm_close <- mmm[which(mmm$Date == "2005-04-01"),]$Close
-mmm_2005 <- (mmm_close-mmm_open)/mmm_close
 
 
 array = c("mmm", "aapl")
 
 
-stocks = list()
+stocks_2005 = list()
 
 for (i in 1:length(array)) {
   
-  stocks[[i]] = read.table("../Stocks/mmm.us.txt", sep=",", header=TRUE)
+  dir = c("../Stocks/", as.character(array[i]), ".us.txt")
+  dir2 = str_c(dir, collapse = "")
+  stock = read.table(dir2, sep=",", header=TRUE)
+  stock[3] <- NULL
+  stock[3] <- NULL
+  stock[4] <- NULL
+  stock[4] <- NULL
+  stock[2] <- NULL
+
+  #stock_close_03 <- stock[which(stock$Date == "2005-03-01"),]$Close 
+  #stock_close_04 <- stock[which(stock$Date == "2005-04-01"),]$Close
+  #s_2005 <- (stock_close_03-stock_close_04)/stock_close_04
+  
+  data1 = data.frame(stock_close_03)
+  
+  stock$name <- array[i]
+  
+  stocks_2005[[i]] <- stock
+  
   
 }
 
-stocks[[1]]
+stocks_2005[[1]]
+
 
 
 ```
