--- a/Market_Analysis.Rmd
+++ b/Market_Analysis.Rmd
@@ -18,8 +18,12 @@ library(stringr)
 ###Read in Data
 ```{r, echo=TRUE}
 
+# array of stocks data
+snp = read_csv("Stocks.csv")
+arr100 = snp$Symbol[1:100]
+sec100 = snp$Sector[1:100]
 
-array = c("mmm", "aapl")
+array = arr100  #c("mmm", "aapl")
 
 
 stocks_2005 = list()
@@ -27,7 +31,12 @@ stocks_2005 = list()
 for (i in 1:length(array)) {
   
   dir = c("../Stocks/", as.character(array[i]), ".us.txt")
+  
   dir2 = str_c(dir, collapse = "")
+  print(dir2)
+  if(!file.exists(dir2)) {
+    next
+  }
   stock = read.table(dir2, sep=",", header=TRUE)
   stock[3] <- NULL
   stock[3] <- NULL
@@ -39,17 +48,66 @@ for (i in 1:length(array)) {
   #stock_close_04 <- stock[which(stock$Date == "2005-04-01"),]$Close
   #s_2005 <- (stock_close_03-stock_close_04)/stock_close_04
   
-  data1 = data.frame(stock_close_03)
+  #data1 = data.frame(stock_close_03)
   
   stock$name <- array[i]
   
   stocks_2005[[i]] <- stock
   
+  stock
   
 }
 
-stocks_2005[[1]]
+
+stocks_2005[[4]]
 
 
+rets = numeric(100)
+names = c()
+colnames(return2005) = c("return", "name")
+
+
+# for (i in 1:18) {
+#   
+#   stock_df = stocks_2005[[i]]
+#   
+#   stock_df$Date = as.character(stock_df$Date)
+#   
+#   
+#   
+#   firstN = which(stock_df$Date == "2005-03-01")
+#   secondN = which(stock_df$Date == "2005-04-01")
+#   
+#   print(firstN)
+#   print(secondN)
+#   
+#   if ( firstN == 0 | secondN == 0) {
+#     next
+#   }
+#   
+#   stock_close_03 <- stock_df[firstN,]$Close 
+#   stock_close_04 <- stock_df[secondN,]$Close
+#   s_2005 <- (stock_close_03-stock_close_04)/stock_close_04
+#   
+#   print(s_2005)
+#   
+#   rets[i] = s_2005
+#   names = c(stock_df$name[1], names)
+#   
+#   
+# }
+# 
+# return2005 = data.frame(rets, names)
+# 
+# return2005
+# 
 
 ```
+
+```{r}
+# array of stocks data
+snp = read_csv("Stocks.csv")
+arr100 = snp$Symbol[1:100]
+sec100 = snp$Sector[1:100]
+```
+
