--- a/Market_Analysis.Rmd
+++ b/Market_Analysis.Rmd
@@ -34,12 +34,6 @@ for (i in 1:length(array)) {
   stock[4] <- NULL
   stock[4] <- NULL
   stock[2] <- NULL
-
-  #stock_close_03 <- stock[which(stock$Date == "2005-03-01"),]$Close 
-  #stock_close_04 <- stock[which(stock$Date == "2005-04-01"),]$Close
-  #s_2005 <- (stock_close_03-stock_close_04)/stock_close_04
-  
-  data1 = data.frame(stock_close_03)
   
   stock$name <- array[i]
   
@@ -49,7 +43,29 @@ for (i in 1:length(array)) {
 }
 
 stocks_2005[[1]]
+stocks_2005[[2]]
+```
 
+```{r, echo=TRUE}
+array = c("mmm")
+stocks_2005 = list()
 
+stock = read.table(dir2, sep=",", header=TRUE)
+for (i in 1:length(array)) {
+  stock_close_03 <- stock[which(stock$Date == "2005-03-01"),]$Close 
+  stock_close_03$name <- array[i]
+}
+stock_close_03
+```
 
+```{r, echo=TRUE}
+array = c("aapl")
+stocks_2005 = list()
+
+stock = read.table(dir2, sep=",", header=TRUE)
+for (i in 1:length(array)) {
+  stock_close_03 <- stock[which(stock$Date == "2005-03-01"),]$Close 
+  stock_close_03$name <- array[i]
+}
+stock_close_03
 ```
