--- a/Market_Analysis.Rmd
+++ b/Market_Analysis.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(stringr)
-
+library(readr)
 ```
 
 ###Read in Data
@@ -44,11 +44,11 @@ for (i in 1:length(array)) {
   stock[4] <- NULL
   stock[2] <- NULL
 
-  #stock_close_03 <- stock[which(stock$Date == "2005-03-01"),]$Close 
-  #stock_close_04 <- stock[which(stock$Date == "2005-04-01"),]$Close
-  #s_2005 <- (stock_close_03-stock_close_04)/stock_close_04
-  
-  #data1 = data.frame(stock_close_03)
+  stock_close_03 <- stock[which(stock$Date == "2005-03-01"),]$Close
+  stock_close_04 <- stock[which(stock$Date == "2005-04-01"),]$Close
+  s_2005 <- (stock_close_03-stock_close_04)/stock_close_04
+
+  data1 = data.frame(stock_close_03)
   
   stock$name <- array[i]
   
@@ -64,42 +64,45 @@ stocks_2005[[4]]
 
 rets = numeric(100)
 names = c()
-colnames(return2005) = c("return", "name")
+colnames(return2005) = c("return", "name") # return2005 not defined
 
-
-# for (i in 1:18) {
+ for (i in 1:18) {
 #   
-#   stock_df = stocks_2005[[i]]
+   stock_df = stocks_2005[[i]]
 #   
-#   stock_df$Date = as.character(stock_df$Date)
-#   
+   stock_df$Date = as.character(stock_df$Date)
 #   
 #   
-#   firstN = which(stock_df$Date == "2005-03-01")
-#   secondN = which(stock_df$Date == "2005-04-01")
 #   
-#   print(firstN)
-#   print(secondN)
+   firstN = which(stock_df$Date == "2005-03-01")
+   secondN = which(stock_df$Date == "2005-04-01")
 #   
-#   if ( firstN == 0 | secondN == 0) {
-#     next
-#   }
+   print(firstN)
+   print(secondN)
 #   
-#   stock_close_03 <- stock_df[firstN,]$Close 
-#   stock_close_04 <- stock_df[secondN,]$Close
-#   s_2005 <- (stock_close_03-stock_close_04)/stock_close_04
+   if ((is.integer(firstN) && length(firstN) == 0) | 
+       (is.integer(secondN) && length(secondN) == 0)) {
+     next
+   }
+    # if (firstN == 0 | secondN == 0) {
+    #   next
+    # }
 #   
-#   print(s_2005)
+   stock_close_03 <- stock_df[firstN,]$Close 
+   stock_close_04 <- stock_df[secondN,]$Close
+   s_2005 <- (stock_close_03-stock_close_04)/stock_close_04
 #   
-#   rets[i] = s_2005
-#   names = c(stock_df$name[1], names)
+   print(s_2005)
+#   
+   rets[i] = s_2005
+   names = c(stock_df$name[1], names)
 #   
 #   
-# }
+ }
 # 
-# return2005 = data.frame(rets, names)
+ return2005 = data.frame(rets, names)
 # 
-# return2005
+ return2005
 # 
 
 ```
