--- a/Market_Analysis.Rmd
+++ b/Market_Analysis.Rmd
@@ -133,9 +133,16 @@ set.seed(679)
 stocks = readInStocks(5)
 readValues = closeDiffPct(5, "2005-03-01", "2005-04-01", stocks)
 readValues
-
+hist(readValues$rets)
+mu = mean(readValues$rets)
+var = var(readValues$rets)
+mu
+var
 ```
 
+Prior distribution: $$g({\theta},{\sigma^2}) = Normal() * InverseGamma() $$
+Likelihood function: $$L({\mu},{\sigma^2};x_1,...,x_n) = (2\pi{\sigma^2})^{-n/2}  exp({-1/{2\sigma^2}}) \sum\limits_{j=1}^n (x_j - \mu)^2$$
+Posterior distribution: $$g(\theta,\sigma^2 | x_i) = L({\mu},{\sigma^2};x_1,...,x_n) * g({\theta},{\sigma^2})$$
 
 
 
