--- a/Market_Analysis.Rmd
+++ b/Market_Analysis.Rmd
@@ -331,7 +331,7 @@ dates = c("2008-03-04", "2009-03-03", "2010-03-03")
 
 #markov = function (n, dates ) {
 
-n= 120
+n= 80
 dates = c("2005-03-01", "2006-03-01", "2007-03-01", "2008-03-04")
 
 
@@ -381,14 +381,14 @@ dates = c("2005-03-01", "2006-03-01", "2007-03-01", "2008-03-04")
 
 ```{r}
 
-dates = c("2005-03-01", "2005-04-01", "2005-05-02", "2005-06-01", "2005-07-01")
-markov(n = 80, dates = dates)
+#dates = c("2005-03-01", "2005-04-01", "2005-05-02", "2005-06-01", "2005-07-01")
+#markov(n = 80, dates = dates)
 
-dates = c("2005-03-01", "2006-03-01", "2007-03-01", "2008-03-04")
-markov(n = 80, dates = dates)
+#dates = c("2005-03-01", "2006-03-01", "2007-03-01", "2008-03-04")
+#markov(n = 80, dates = dates)
 
-dates = c("2008-03-04", "2009-03-03", "2010-03-03")
-markov(n= 80, dates = dates)
+#dates = c("2008-03-04", "2009-03-03", "2010-03-03")
+#markov(n= 80, dates = dates)
 
 
 ```
