--- a/Market_Analysis.Rmd
+++ b/Market_Analysis.Rmd
@@ -173,9 +173,6 @@ closeDiffPct = function(n, firstDate, secondDate, stocks_2005) {
     
 }
 
-
-
-
 ```
 
 
@@ -202,10 +199,13 @@ Posterior distribution: $$g(\theta,\sigma^2 | x_i) = L({\mu},{\sigma^2};x_1,...,
 
 ###Graph Data
 ```{r}
+
 # hist(readValues$rets)
 # mean(readValues$rets)
 # var(readValues$rets)
+
 ```
+
 ###Prior
 ```{r}
 
@@ -225,8 +225,9 @@ Posterior distribution: $$g(\theta,\sigma^2 | x_i) = L({\mu},{\sigma^2};x_1,...,
 
 
 
-###Making First Likelihood Function
+###Creating First Likelihood Function
 ```{r}
+
 L = function(theta, x, n, sigma2 = 2){
   first = (2*pi*sigma2)^(-n/2)
   second = exp((-1/(2*sigma2))*sum((x - theta)^2))
@@ -270,7 +271,6 @@ C = mean(c)
 postC = (post/C)
 
 plot(theta, postC)
-
 
 ```
 
@@ -324,7 +324,6 @@ dates = c("2008-03-04", "2009-03-03", "2010-03-03")
 
 #}
 
-
 ```
 
 ```{r}
@@ -368,7 +367,7 @@ dates = c("2005-03-01", "2006-03-01", "2007-03-01", "2008-03-04")
   
   plot(theta, finalPost)
   
-  # The theta value for the max finalPost
+  # Theta value for the max finalPost
   maxInd = which.max(finalPost)
   theta[maxInd]
   paste("The value of theta for the max value in our final posterior distribution is : ",   theta[maxInd])
